--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   <meta name="viewport" content="width=device-width, initial-scale=1"><script defer src="runtime.bundle.js"></script><script defer src="main.bundle.js"></script></head>
   <body>
+    <div id="container"></div>
   </body>
 </html>
